--- a/package.json
+++ b/package.json
@@ -1,39 +1,51 @@
 {
-  "name": "savannahtrail-dashboard",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@tanstack/react-query": "^5.87.4",
-    "@types/js-cookie": "^3.0.6",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "js-cookie": "^3.0.5",
-    "lucide-react": "^0.544.0",
-    "next": "14.2.32",
-    "next-themes": "^0.4.6",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.62.0",
-    "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^4.1.8"
-  },
-  "devDependencies": {
-    "@hookform/resolvers": "^5.2.1",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+	"name": "savannahtrail-dashboard",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@radix-ui/react-avatar": "^1.1.10",
+		"@radix-ui/react-dropdown-menu": "^2.1.16",
+		"@radix-ui/react-label": "^2.1.7",
+		"@radix-ui/react-popover": "^1.1.15",
+		"@radix-ui/react-scroll-area": "^1.2.10",
+		"@radix-ui/react-separator": "^1.1.0",
+		"@radix-ui/react-slot": "^1.2.3",
+		"@radix-ui/react-tabs": "^1.1.0",
+		"@tanstack/react-query": "^5.87.4",
+		"@radix-ui/react-switch": "^1.1.0",
+		"@tanstack/react-table": "^8.21.3",
+		"@types/js-cookie": "^3.0.6",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"date-fns": "^4.1.0",
+		"js-cookie": "^3.0.5",
+		"lucide-react": "^0.544.0",
+		"next": "14.2.32",
+		"next-themes": "^0.4.6",
+		"react": "^18",
+		"react-day-picker": "^8.10.1",
+		"react-dom": "^18",
+		"react-hook-form": "^7.62.0",
+		"sonner": "^2.0.7",
+		"tailwind-merge": "^3.3.1",
+		"tailwindcss": "3.3.3",
+		"tailwindcss-animate": "^1.0.7",
+		"typescript": "^5"
+	},
+	"devDependencies": {
+		"@hookform/resolvers": "^5.2.1",
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"postcss": "^8",
+		"recharts": "^3.2.0",
+		"sonner": "^2.0.7",
+		"zod": "^4.1.5"
+	}
 }
