--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
 		"@radix-ui/react-scroll-area": "^1.2.10",
 		"@radix-ui/react-separator": "^1.1.0",
 		"@radix-ui/react-slot": "^1.2.3",
+		"@radix-ui/react-switch": "^1.1.0",
 		"@radix-ui/react-tabs": "^1.1.0",
 		"@tanstack/react-query": "^5.87.4",
-		"@radix-ui/react-switch": "^1.1.0",
 		"@tanstack/react-table": "^8.21.3",
 		"@types/js-cookie": "^3.0.6",
 		"class-variance-authority": "^0.7.1",
@@ -44,6 +44,7 @@
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
 		"postcss": "^8",
+		"react-is": "^19.1.1",
 		"recharts": "^3.2.0",
 		"sonner": "^2.0.7",
 		"zod": "^4.1.5"
