--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
 	},
 	"dependencies": {
 		"@radix-ui/react-avatar": "^1.1.10",
+		"@radix-ui/react-dialog": "^1.1.1",
 		"@radix-ui/react-dropdown-menu": "^2.1.16",
 		"@radix-ui/react-label": "^2.1.7",
 		"@radix-ui/react-popover": "^1.1.15",
 		"@radix-ui/react-scroll-area": "^1.2.10",
+		"@radix-ui/react-select": "^2.1.1",
 		"@radix-ui/react-separator": "^1.1.0",
 		"@radix-ui/react-slot": "^1.2.3",
 		"@radix-ui/react-switch": "^1.1.0",
@@ -28,6 +30,7 @@
 		"lucide-react": "^0.544.0",
 		"next": "14.2.32",
 		"next-themes": "^0.4.6",
+		"query-string": "^9.3.1",
 		"react": "^18",
 		"react-day-picker": "^8.10.1",
 		"react-dom": "^18",
