--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@types/js-cookie": "^3.0.6",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"cmdk": "^1.1.1",
 		"date-fns": "^4.1.0",
 		"js-cookie": "^3.0.5",
 		"lucide-react": "^0.544.0",
@@ -35,6 +36,7 @@
 		"react-day-picker": "^8.10.1",
 		"react-dom": "^18",
 		"react-hook-form": "^7.62.0",
+		"react-phone-number-input": "^3.4.13",
 		"sonner": "^2.0.7",
 		"tailwind-merge": "^3.3.1",
 		"tailwindcss": "3.3.3",
